--- a/css/style.css
+++ b/css/style.css
@@ -101,4 +101,16 @@ footer.page-footer {
   border-radius: 10px;
 }
 
+#card-sponsor{
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.span-sponsor-silver{
+  background-color: #e0e0e0;
+  color: #333;
+  border-radius: 5px;
+  border: #e0e0e0 solid 5px;
+}
+
 
